hphp/test/zend/bad/ext-standard-strings/bug24208.php
<?php
$a = $b = $c = "oops";
parse_str("a=1&b=2&c=3");
var_dump($a, $b, $c);
?>